--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -39,7 +39,7 @@
                             <th>Cargo</th>
                             <th>Linea de Negocio</th>
                             <th>Editar</th>
-                            <th>Eliminar</th>
+                            <th>Deshabilitar</th>
                         </tr>
                         </thead>
                         <% if (typeof data == 'undefined') { %>
@@ -63,7 +63,7 @@
                             <th>Cargo</th>
                             <th>Linea de Negocio</th>
                             <th>Editar</th>
-                            <th>Eliminar</th>
+                            <th>Deshabilitar</th>
                         </tr>
                         </tfoot>
                         </table>
@@ -164,7 +164,7 @@ $(document).ready(function(){
                 "data": "",
                 "render": (data, type, row) => {
                         return `<form class="form-inline" method="post" action="/sistema/remove-user/${row.id_usuario}">
-                                    <button class="btn btn-danger" type="submit"><i class="fa fa-trash"></i></button>
+                                    <button class="btn btn-danger" type="submit"><i class="fa fa-ban"></i></button>
                                 </form>`;
                 }
             }
