--- a/src/views/checkRoles.ejs
+++ b/src/views/checkRoles.ejs
@@ -35,7 +35,7 @@
                             <th>Nombre</th>
                             <th>Descripción</th>
                             <th>Editar</th>
-                            <th>Eliminar</th>
+                            <th>Deshabilitar</th>
                         </tr>
                         </thead>
                         <% if (typeof data == 'undefined') { %>
@@ -54,7 +54,7 @@
                             <th>Nombre</th>
                             <th>Descripción</th>
                             <th>Editar</th>
-                            <th>Eliminar</th>
+                            <th>Deshabilitar</th>
                         </tr>
                         </tfoot>
                         </table>
@@ -150,7 +150,7 @@ $(document).ready(function(){
                 "data": "",
                 "render": (data, type, row) => {
                         return `<form class="form-inline" method="post" action="/sistema/remove-rol/${row.id_rol}">
-                                    <button class="btn btn-danger" type="submit"><i class="fa fa-trash"></i></button>
+                                    <button class="btn btn-danger" type="submit"><i class="fa fa-ban"></i></button>
                                 </form>`;
                 }
             }
