--- a/src/views/company.ejs
+++ b/src/views/company.ejs
@@ -22,14 +22,16 @@
     <div class="col-lg-12">
         <div class="ibox">
             <div class="ibox-content">
+                <% if (typeof company[0] == 'undefined') { %>
                 <div class="row">
-                    <% if (typeof company[0] == 'undefined') { %>
-                        <div class="col-lg-12">
-                            <div class="ibox">
-                                <h3>No hay una empresa inscrita en el sistema</h3>
-                            </div>
+                    <div class="col-lg-12">
+                        <div class="ibox">
+                            <h3>No hay una empresa inscrita en el sistema</h3>
                         </div>
-                    <% } else { %>
+                    </div>
+                </div>
+                <% } else { %>
+                <div class="row">
                     <div class="col-lg-6">
                         <div class="ibox">
                             <div class="form-control">
@@ -96,8 +98,18 @@
                             </div>
                         </div>
                     </div>
-                    <% } %>
                 </div>
+                <div class="form-group row">
+                    <div class="col-sm-4 col-sm-offset-2">
+                        <form class="form-inline btn-edit" method="get" action="/sistema/edit-company/<%= company[0].id_empresa %>">
+                            <button class="btn btn-warning" type="submit">Editar</button>
+                        </form>
+                        <form class="form-inline btn-delete" method="post" action="/sistema/remove-company/<%= company[0].id_empresa %>">
+                            <button class="btn btn-danger" type="submit">Deshabilitar</button>
+                        </form>
+                    </div>
+                </div>
+                <% } %>
             </div>
         </div>
     </div>
