--- a/src/views/editCompany.ejs
+++ b/src/views/editCompany.ejs
@@ -12,7 +12,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Agregar Empresa</strong>
+                <strong>Editar Empresa</strong>
             </li>
         </ol>
     </div>
@@ -22,23 +22,38 @@
     <div class="col-lg-12">
         <div class="ibox">
             <div class="ibox-content">
-                <form method="POST" action="/sistema/add-company">
+                <form method="POST" action="/sistema/update-company">
                     <div class="row">
                         <div class="col-lg-4">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
-                                        <div class="col-sm-10">
-                                            <input 
-                                                type="text"
-                                                name="id_rif"
-                                                id="id_rif"
-                                                placeholder="Cédula/Rif *" 
-                                                class="form-control"
-                                                required
-                                            >
+                                    <% if ((company.cedula_empresa === null) || (company.cedula_empresa === '')) { %>
+                                        <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
+                                            <div class="col-sm-10">
+                                                <input 
+                                                    type="text"
+                                                    name="rif_empresa"
+                                                    id="rif_empresa"
+                                                    value="<%= company.rif_empresa %>"
+                                                    class="form-control"
+                                                    required
+                                                >
+                                            </div>
                                         </div>
-                                    </div>
+                                    <% } else { %>
+                                        <div class="form-group row"><label class="col-sm-2 col-form-label">Cédula/Rif</label>
+                                            <div class="col-sm-10">
+                                                <input 
+                                                    type="text"
+                                                    name="cedula_empresa"
+                                                    id="cedula_empresa"
+                                                    value="<%= company.cedula_empresa %>" 
+                                                    class="form-control"
+                                                    required
+                                                >
+                                            </div>
+                                        </div>
+                                    <% } %>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-2 col-form-label">Nombre</label>
                                         <div class="col-sm-10">
@@ -46,7 +61,7 @@
                                                 type="text"
                                                 name="nombre_empresa"
                                                 id="nombre_empresa" 
-                                                placeholder="Nombre de Empresa *" 
+                                                value="<%= company.nombre_empresa %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -59,7 +74,7 @@
                                                 type="text"
                                                 name="dominio_empresa"
                                                 id="dominio_empresa"
-                                                placeholder="Dominio de Empresa *"
+                                                value="<%= company.dominio %>"
                                                 class="form-control" 
                                                 required
                                             >
@@ -72,7 +87,7 @@
                                                 type="email"
                                                 name="email_empresa"
                                                 id="email_empresa" 
-                                                placeholder="Email *" 
+                                                value="<%= company.correo_empresa %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -90,7 +105,7 @@
                                                 type="text"
                                                 name="pais_empresa"
                                                 id="pais_empresa"
-                                                placeholder="País de Empresa *"
+                                                value="<%= company.pais_empresa %>"
                                                 class="form-control"
                                                 required 
                                             >
@@ -103,7 +118,7 @@
                                                 type="text"
                                                 name="direccion_empresa"
                                                 id="direccion_empresa"
-                                                placeholder="Dirección Fiscal *" 
+                                                value="<%= company.direccion_empresa %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -117,7 +132,7 @@
                                                 step="0.01"
                                                 name="comision_empresa"
                                                 id="comision_empresa"
-                                                placeholder="% Comisión *" 
+                                                value="<%= company.porcentaje_empresa %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -130,7 +145,7 @@
                                                 type="date"
                                                 name="dias_renovacion_empresa"
                                                 id="dias_renovacion_empresa" 
-                                                placeholder="Días de Renovación *" 
+                                                value="<%= fecha %>" 
                                                 class="form-control"
                                                 required
                                             >
@@ -148,7 +163,7 @@
                                                 type="text"
                                                 name="telefono_empresa"
                                                 id="telefono_empresa" 
-                                                placeholder="Teléfono *" 
+                                                value="<%= company.telefono_empresa %>" 
                                                 class="form-control"
                                                 required
                                             >
@@ -161,7 +176,7 @@
                                                 type="text"
                                                 name="telefono_opcional"
                                                 id="telefono_opcional" 
-                                                placeholder="Teléfono Opcional" 
+                                                value="<%= company.telefono_opcional %>" 
                                                 class="form-control"
                                             >
                                         </div>
@@ -174,7 +189,7 @@
                                                 step="0.0001"
                                                 name="factor_empresa"
                                                 id="factor_empresa" 
-                                                placeholder="Factor Retención *"  
+                                                value="<%= company.factor_retencion %>"  
                                                 class="form-control"
                                                 required
                                             >
@@ -184,10 +199,11 @@
                                     <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
                                         <div class="col-sm-10">
                                             <input 
-                                                type="hidden" 
-                                                placeholder="" 
+                                                type="hidden"
+                                                name="id_empresa"
+                                                id="id_empresa" 
+                                                value="<%= company.id_empresa %>" 
                                                 class="form-control"
-                                                disabled
                                             >
                                         </div>
                                     </div>
@@ -198,7 +214,7 @@
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <a href="/sistema" class="btn btn-white btn-sm">Cancelar</a>
+                            <a href="/sistema/company" class="btn btn-white btn-sm">Cancelar</a>
                             <button class="btn btn-primary btn-sm" type="submit">Guardar Cambios</button>
                         </div>
                     </div>
