--- a/src/views/editInsurer.ejs
+++ b/src/views/editInsurer.ejs
@@ -12,7 +12,7 @@
                 <a>Datos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Agregar Aseguradora</strong>
+                <strong>Editar Aseguradora</strong>
             </li>
         </ol>
     </div>
@@ -22,7 +22,7 @@
     <div class="col-lg-12">
         <div class="ibox">
             <div class="ibox-content">
-                <form method="POST" action="/sistema/add-insurer">
+                <form method="POST" action="/sistema/update-insurer">
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="ibox">
@@ -33,7 +33,7 @@
                                                 type="text"
                                                 name="rif_aseguradora"
                                                 id="rif_aseguradora"
-                                                placeholder="Rif *" 
+                                                value="<%= insurer.rif_aseguradora %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -46,7 +46,7 @@
                                                 type="text"
                                                 name="nombre_aseguradora"
                                                 id="nombre_aseguradora" 
-                                                placeholder="Nombre *" 
+                                                value="<%= insurer.nombre_aseguradora %>"
                                                 class="form-control"
                                                 required
                                             >
@@ -64,7 +64,7 @@
                                                 type="text"
                                                 name="telefono_aseguradora"
                                                 id="telefono_aseguradora" 
-                                                placeholder="Teléfono" 
+                                                value="<%= insurer.telefono_aseguradora %>"
                                                 class="form-control"
                                             >
                                         </div>
@@ -76,7 +76,7 @@
                                                 type="text"
                                                 name="direccion_aseguradora"
                                                 id="direccion_aseguradora"
-                                                placeholder="Dirección Fiscal *"
+                                                value="<%= insurer.direccion_aseguradora %>"
                                                 class="form-control" 
                                                 required
                                             >
@@ -85,11 +85,20 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-12">
+                            <input 
+                                type="hidden" 
+                                name="id_aseguradora"
+                                id="id_aseguradora"
+                                value="<%= insurer.id_aseguradora %>"
+                                class="form-control"
+                            >
+                        </div>
                     </div>
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <a href="/sistema" class="btn btn-white btn-sm">Cancelar</a>
+                            <a href="/sistema/insurers" class="btn btn-white btn-sm">Cancelar</a>
                             <button class="btn btn-primary btn-sm" type="submit">Guardar Cambios</button>
                         </div>
                     </div>
