--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -242,7 +242,7 @@
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <button class="btn btn-white btn-sm" type="submit">Cancelar</button>
+                            <a href="/sistema/users" class="btn btn-white btn-sm">Cancelar</a>
                             <button class="btn btn-primary btn-sm" type="submit">Guardar Cambios</button>
                         </div>
                     </div>
