--- a/src/views/rolForm.ejs
+++ b/src/views/rolForm.ejs
@@ -63,7 +63,7 @@
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
                         <div class="col-sm-4 col-sm-offset-2">
-                            <button class="btn btn-white btn-sm" type="submit">Cancelar</button>
+                            <a href="/sistema" class="btn btn-white btn-sm">Cancelar</a>
                             <button class="btn btn-primary btn-sm" type="submit">Guardar Cambios</button>
                         </div>
                     </div>
