Finalizado modulo de Asegurado

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -60,16 +60,13 @@
                             <li><a href="/sistema/company">Consultar Empresa</a></li>
                         </ul>
                     </li>
-                    <!--li>
-                        <a href="index-2.html"><i class="fa fa-group"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
+                    <li>
+                        <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="index-2.html">Dashboard v.1</a></li>
-                            <li><a href="dashboard_2.html">Dashboard v.2</a></li>
-                            <li><a href="dashboard_3.html">Dashboard v.3</a></li>
-                            <li><a href="dashboard_4_1.html">Dashboard v.4</a></li>
-                            <li><a href="dashboard_5.html">Dashboard v.5 </a></li>
+                            <li><a href="/sistema/add-insured">Agregar Asegurado</a></li>
+                            <li><a href="/sistema/insureds">Consultar Asegurados</a></li>
                         </ul>
-                    </li-->
+                    </li>
                     <!--li>
                         <a href="#"><i class="fa fa-window-restore"></i> <span class="nav-label">Pólizas</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
