Finalizados modulo de Bono y arreglos en el codigo

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -21,6 +21,10 @@
     <!-- Gritter -->
     <link href="/js/plugins/gritter/jquery.gritter.css" rel="stylesheet">
 
+    <!-- Wizard Form style -->
+    <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
+    <link href="/css/plugins/steps/jquery.steps.css" rel="stylesheet">
+
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 
@@ -67,19 +71,33 @@
                             <li><a href="/sistema/insureds">Consultar Asegurados</a></li>
                         </ul>
                     </li>
-                    <!--li>
+                    <li>
                         <a href="#"><i class="fa fa-window-restore"></i> <span class="nav-label">Pólizas</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="graph_flot.html">Flot Charts</a></li>
-                            <li><a href="graph_morris.html">Morris.js Charts</a></li>
+                            <li>
+                                <a href="#">Agregar Individual<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/add-vehicle-policy">Vehículo</a></li>
+                                    <!--li><a href="#">Third Level Item</a></li>
+                                    <li><a href="#">Third Level Item</a></li-->
+                                </ul>
+                            </li>
+                            <!--li><a href="graph_morris.html">Morris.js Charts</a></li>
                             <li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
                             <li><a href="graph_chartjs.html">Chart.js</a></li>
                             <li><a href="graph_chartist.html">Chartist</a></li>
                             <li><a href="c3.html">c3 charts</a></li>
                             <li><a href="graph_peity.html">Peity Charts</a></li>
-                            <li><a href="graph_sparkline.html">Sparkline Charts</a></li>
+                            <li><a href="graph_sparkline.html">Sparkline Charts</a></li-->
                         </ul>
-                    </li-->
+                    </li>
+                    <li>
+                        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Bonos</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li><a href="/sistema/add-bond">Agregar Bono</a></li>
+                            <li><a href="/sistema/bonds">Consultar Bonos</a></li>
+                        </ul>
+                    </li>
                     <!--li>
                         <a href="mailbox.html"><i class="fa fa-exclamation-triangle"></i> <span class="nav-label">Siniestro</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
