--- a/src/public/css/plugins/steps/jquery.steps.css
+++ b/src/public/css/plugins/steps/jquery.steps.css
@@ -68,7 +68,7 @@
 
 .wizard > .steps > ul > li
 {
-    width: 25%;
+    width: 16.65%;
 }
 
 .wizard > .steps > ul > li,
@@ -111,7 +111,7 @@
 .wizard > .steps .current a:hover,
 .wizard > .steps .current a:active
 {
-    background: #1AB394;
+    background: #1637cf;
     color: #fff;
     cursor: default;
 }
@@ -120,7 +120,7 @@
 .wizard > .steps .done a:hover,
 .wizard > .steps .done a:active
 {
-    background: #6fd1bd;
+    background: #113bff;
     color: #fff;
 }
 
@@ -251,7 +251,7 @@
 .wizard > .actions a:hover,
 .wizard > .actions a:active
 {
-    background: #1AB394;
+    background: #113bff;
     color: #fff;
     display: block;
     padding: 0.5em 1em;
