--- a/src/views/bonds.ejs
+++ b/src/views/bonds.ejs
@@ -1,17 +1,18 @@
 <!-- Se incluye el layout del header -->
 <%- include('layouts/header') %>
+
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Asegurados</h2>
+        <h2>Bonos</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="/sistema">Home</a>
             </li>
             <li class="breadcrumb-item">
-                <a>Asegurados</a>
+                <a>Bonos</a>
             </li>
             <li class="breadcrumb-item active">
-                <strong>Consulta de Asegurados</strong>
+                <strong>Consulta de Bonos</strong>
             </li>
         </ol>
     </div>
@@ -21,21 +22,18 @@
         <div class="col-lg-12">
             <div class="ibox ">
                 <div class="ibox-title">
-                    <h5>Asegurados</h5>
+                    <h5>Bonos</h5>
                 </div>
                 <div class="ibox-content">
                     <div class="table-responsive">
                         <table 
                             class="table table-striped table-bordered table-hover"
-                            id="tablaAsegurados" 
+                            id="tablaBonos" 
                         >
                         <thead>
                         <tr>
-                            <th>Cédula</th>
-                            <th>Rif</th>
-                            <th>Nombre</th>
-                            <th>Celular</th>
-                            <th>Correo Principal</th>
+                            <th>Tipo</th>
+                            <th>Descripción</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -45,11 +43,8 @@
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>Cédula</th>
-                            <th>Rif</th>
-                            <th>Nombre</th>
-                            <th>Celular</th>
-                            <th>Correo Principal</th>
+                            <th>Tipo</th>
+                            <th>Descripción</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -124,24 +119,21 @@
 <!-- Page-Level Scripts -->
 <script>
 var lista = <%- JSON.stringify(data) %>;
-var tablaAsegurado = null;
+var tablaBono = null;
 $(document).ready(function(){
-    tablaAsegurado = $('#tablaAsegurados').DataTable({
+    tablaBono = $('#tablaBonos').DataTable({
         pageLength: 25,
         responsive: true,
         dom: '<"html5buttons"B>lTfgitp',
         processing: true,
         serverSide: false,
         columns: [
-            {"data": "cedula_asegurado"},
-            {"data": "rif_asegurado"},
-            {"data": "nombre_asegurado"},
-            {"data": "telefono_asegurado"},
-            {"data": "correo_asegurado"},
+            {"data": "tipo_bono"},
+            {"data": "descripcion_bono"},
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="get" action="/sistema/edit-insured/${row.id_asegurado}">
+                        return `<form class="form-inline" method="get" action="/sistema/edit-bond/${row.id_bono}">
                                     <button class="btn btn-warning" type="submit"><i class="fa fa-pencil"></i></button>
                                 </form>`;
                 }
@@ -149,7 +141,7 @@ $(document).ready(function(){
             {
                 "data": "",
                 "render": (data, type, row) => {
-                        return `<form class="form-inline" method="post" action="/sistema/remove-insured/${row.id_asegurado}">
+                        return `<form class="form-inline" method="post" action="/sistema/remove-bond/${row.id_bono}">
                                     <button class="btn btn-danger" type="submit"><i class="fa fa-ban"></i></button>
                                 </form>`;
                 }
@@ -168,8 +160,8 @@ $(document).ready(function(){
             }
         ]
     });
-    tablaAsegurado.rows.add(lista);
-    tablaAsegurado.draw();
+    tablaBono.rows.add(lista);
+    tablaBono.draw();
 });
 </script>
 
