Finalizado modulo de cobertura

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -98,6 +98,13 @@
                             <li><a href="/sistema/bonds">Consultar Bonos</a></li>
                         </ul>
                     </li>
+                    <li>
+                        <a href="#"><i class="fa fa-shield"></i> <span class="nav-label">Coberturas</span><span class="fa arrow"></span></a>
+                        <ul class="nav nav-second-level collapse">
+                            <li><a href="/sistema/add-hedge">Agregar Cobertura</a></li>
+                            <li><a href="/sistema/hedges">Consultar Coberturas</a></li>
+                        </ul>
+                    </li>
                     <!--li>
                         <a href="mailbox.html"><i class="fa fa-exclamation-triangle"></i> <span class="nav-label">Siniestro</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
