--- a/src/views/layouts/footerWizardForm.ejs
+++ b/src/views/layouts/footerWizardForm.ejs
@@ -28,6 +28,23 @@
 <!-- Jquery Validate -->
 <script src="/js/plugins/validate/jquery.validate.min.js"></script>
 
+<script src="/js/plugins/jquery.cookie/jquery.cookie.js"></script>
+
+<script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <% if(typeof alert != 'undefined') { %>
+        <script>
+            Swal.fire({
+                title: '<%= alertTitle %>',
+                text: '<%= alertMessage %>',
+                icon: '<%= alertIcon %>',
+                showConfirmButton: <%= showConfirmButton %>,
+                timer: <%= timer %>
+            }).then(()=>{
+                window.location='/<%= ruta %>'
+            })
+        </script>
+    <% } %>
 
 <script>
     $(document).ready(function(){
@@ -35,7 +52,8 @@
         $("#form").steps({
             headerTag: "h1",
             bodyTag: "fieldset",
-            titleTemplate:"<span class='text'></span> #title#"
+            titleTemplate:"<span class='text'></span> #title#",
+            saveState: true
         });
     });
 </script>
