Finalizado dataTable de consulta de polizas en modulo de poliza

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -82,8 +82,8 @@
                                     <li><a href="#">Third Level Item</a></li-->
                                 </ul>
                             </li>
-                            <!--li><a href="graph_morris.html">Morris.js Charts</a></li>
-                            <li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
+                            <li><a href="/sistema/policies">Consultar Pólizas</a></li>
+                            <!--li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
                             <li><a href="graph_chartjs.html">Chart.js</a></li>
                             <li><a href="graph_chartist.html">Chartist</a></li>
                             <li><a href="c3.html">c3 charts</a></li>
