--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -532,7 +532,7 @@
                         </fieldset>
                         <h1><i class="fa fa-shield"></i> Coberturas</h1>
                         <fieldset>
-                            <form action="/sistema/add-hedge" method="post">
+                            <form action="/sistema/add-hedge-policy" method="post">
                                 <div class="col-lg-12">
                                     <div class="form-group">
                                         <div class="form-group row"><label class="col-sm-2 col-form-label">Coberturas</label>
@@ -558,7 +558,7 @@
                         </fieldset>
                         <h1><i class="fa fa-money"></i> Bonos</h1>
                         <fieldset>
-                            <form action="/sistema/add-bond" method="post">
+                            <form action="/sistema/add-bond-policy" method="post">
                                 <div class="row">
                                     <div class="col-lg-6">
                                         <div class="form-group">
