Finalizado modulo de datos, con arreglos del codigo

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -59,9 +59,10 @@
                         <ul class="nav nav-second-level collapse">
                             <li><a href="/sistema/add-insurer">Agregar Aseguradora</a></li>
                             <li><a href="/sistema/insurers">Consultar Aseguradoras</a></li>
-                            <!--li><a href="dashboard_2.html">Consultar Financiadoras</a></li-->
-                            <li><a href="/sistema/add-company">Agregar Empresa</a></li>
-                            <li><a href="/sistema/company">Consultar Empresa</a></li>
+                            <li><a href="/sistema/add-own-agent">Agregar Agente Propio</a></li>
+                            <li><a href="/sistema/own-agents">Consultar Agentes Propios</a></li>
+                            <li><a href="/sistema/add-executive">Agregar Ejecutivo</a></li>
+                            <li><a href="/sistema/executives">Consultar Ejecutivos</a></li>
                         </ul>
                     </li>
                     <li>
@@ -91,13 +92,6 @@
                             <li><a href="graph_sparkline.html">Sparkline Charts</a></li-->
                         </ul>
                     </li>
-                    <li>
-                        <a href="#"><i class="fa fa-shield"></i> <span class="nav-label">Coberturas</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="/sistema/add-hedge">Agregar Cobertura</a></li>
-                            <li><a href="/sistema/hedges">Consultar Coberturas</a></li>
-                        </ul>
-                    </li>
                     <!--li>
                         <a href="mailbox.html"><i class="fa fa-exclamation-triangle"></i> <span class="nav-label">Siniestro</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -125,13 +119,6 @@
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
                     </li-->
-                    <li>
-                        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Bonos</span><span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                            <li><a href="/sistema/add-bond">Agregar Bono</a></li>
-                            <li><a href="/sistema/bonds">Consultar Bonos</a></li>
-                        </ul>
-                    </li>
                     <!--li>
                         <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Gestión de Cobranza</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
