Terminado modulo de Asegurados

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -68,8 +68,20 @@
                     <li>
                         <a href="#"><i class="fa fa-group"></i> <span class="nav-label">Asegurados</span> <span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="/sistema/add-insured">Agregar Asegurado</a></li>
-                            <li><a href="/sistema/insureds">Consultar Asegurados</a></li>
+                            <li>
+                                <a href="#">Agregar Asegurado<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/add-natural-insured">Persona Natural</a></li>
+                                    <li><a href="/sistema/add-legal-insured">Persona Juridica</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Consultar Asegurados<span class="fa arrow"></span></a>
+                                <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/natural-insureds">Persona Natural</a></li>
+                                    <li><a href="/sistema/legal-insureds">Persona Juridica</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </li>
                     <li>
