--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -14,6 +14,7 @@
 
 <!-- Mainly scripts -->
     <script src="/js/jquery-3.1.1.min.js"></script>
+    <script src="/js/jquery-2.1.1.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.js"></script>
     <script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
@@ -71,6 +72,15 @@
             })
         </script>
     <% } %>
+
+    <script>
+        $("#celular_asegurado_per_jur").keyup(function() {
+            $('.active-input-1').show();
+        });
+        $("#correo_asegurado_per_nat").keyup(function() {
+            $('.active-input-2').show();
+        });
+    </script>
     
     <script>
     $(document).ready(function() {
