--- a/src/views/legalInsureds.ejs
+++ b/src/views/legalInsureds.ejs
@@ -36,6 +36,7 @@
                             <th>Telefono</th>
                             <th>Celular</th>
                             <th>Correo</th>
+                            <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -50,6 +51,7 @@
                             <th>Telefono</th>
                             <th>Celular</th>
                             <th>Correo</th>
+                            <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -138,6 +140,7 @@ $(document).ready(function(){
             {"data": "telefono_asegurado_per_jur"},
             {"data": "celular_asegurado_per_jur"},
             {"data": "correo_asegurado_per_jur"},
+            {"data": "direccion_asegurado_per_jur"},
             {
                 "data": "",
                 "render": (data, type, row) => {
