--- a/src/views/naturalInsuredForm.ejs
+++ b/src/views/naturalInsuredForm.ejs
@@ -77,6 +77,7 @@
                                             >
                                         </div>
                                     </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
@@ -119,16 +120,16 @@
                                             </select>
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Dirección</label>
                                         <div class="col-sm-10">
-                                            <input 
-                                                type="hidden" 
-                                                placeholder="" 
+                                            <textarea 
+                                                name="direccion_asegurado_per_nat"
+                                                id="direccion_asegurado_per_nat" 
+                                                placeholder="Dirección *" 
                                                 class="form-control"
-                                                disabled
-                                            >
+                                                required
+                                            ></textarea>
                                         </div>
                                     </div>
                                 </div>
