--- a/src/views/naturalInsureds.ejs
+++ b/src/views/naturalInsureds.ejs
@@ -37,6 +37,7 @@
                             <th>Apellido</th>
                             <th>Correo</th>
                             <th>Celular</th>
+                            <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -52,6 +53,7 @@
                             <th>Apellido</th>
                             <th>Correo</th>
                             <th>Celular</th>
+                            <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -141,6 +143,7 @@ $(document).ready(function(){
             {"data": "apellido_asegurado_per_nat"},
             {"data": "correo_asegurado_per_nat"},
             {"data": "celular_emergencia_per_nat"},
+            {"data": "direccion_asegurado_per_nat"},
             {
                 "data": "",
                 "render": (data, type, row) => {
