--- a/src/views/ownAgentForm.ejs
+++ b/src/views/ownAgentForm.ejs
@@ -64,7 +64,8 @@
                                                 required
                                             >
                                         </div>
-                                    </div>                                    
+                                    </div>
+                                    </br>                                    
                                 </div>
                             </div>
                         </div>
@@ -96,16 +97,16 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Dirección</label>
                                         <div class="col-sm-10">
-                                            <input 
-                                                type="hidden" 
-                                                placeholder="" 
+                                            <textarea 
+                                                name="direccion_agente_propio"
+                                                id="direccion_agente_propio" 
+                                                placeholder="Dirección de Agente Propio *" 
                                                 class="form-control"
-                                                disabled
-                                            >
+                                                required
+                                            ></textarea>
                                         </div>
                                     </div>
                                 </div>
