--- a/src/views/ownAgents.ejs
+++ b/src/views/ownAgents.ejs
@@ -37,6 +37,7 @@
                             <th>Apellido</th>
                             <th>Celular</th>
                             <th>Correo</th>
+                            <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -52,6 +53,7 @@
                             <th>Apellido</th>
                             <th>Celular</th>
                             <th>Correo</th>
+                            <th>Dirección</th>
                             <th>Editar</th>
                             <th>Deshabilitar</th>
                         </tr>
@@ -141,6 +143,7 @@ $(document).ready(function(){
             {"data": "apellido_agente_propio"},
             {"data": "celular_agente_propio"},
             {"data": "correo_agente_propio"},
+            {"data": "direccion_agente_propio"},
             {
                 "data": "",
                 "render": (data, type, row) => {
