--- a/src/views/editLegalInsured.ejs
+++ b/src/views/editLegalInsured.ejs
@@ -88,6 +88,7 @@
                                             </select>
                                         </div>
                                     </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
@@ -144,20 +145,30 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                                        <div class="col-sm-10">
-                                            <input 
-                                                type="hidden"
-                                                name="id_asegurado_per_jur"
-                                                id="id_asegurado_per_jur"  
-                                                value="<%= legalInsured.id_asegurado_per_jur %>" 
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
+                                        <div class="col-sm-9">
+                                            <textarea 
+                                                name="direccion_asegurado_per_jur"
+                                                id="direccion_asegurado_per_jur" 
+                                                placeholder="Dirección *" 
                                                 class="form-control"
-                                            >
+                                                required
+                                            ><%= legalInsured.direccion_asegurado_per_jur %></textarea>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <input 
+                                    type="hidden"
+                                    name="id_asegurado_per_jur"
+                                    id="id_asegurado_per_jur"  
+                                    value="<%= legalInsured.id_asegurado_per_jur %>" 
+                                    class="form-control"
+                                >
                             </div>
                         </div>
                     </div>
