--- a/src/views/editNaturalInsured.ejs
+++ b/src/views/editNaturalInsured.ejs
@@ -92,6 +92,7 @@
                                             >
                                         </div>
                                     </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
@@ -134,20 +135,29 @@
                                             </select>
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Dirección</label>
                                         <div class="col-sm-10">
-                                            <input 
-                                                type="hidden" 
-                                                name="id_asegurado_per_nat"
-                                                id="id_asegurado_per_nat"
-                                                value="<%= naturalInsured.id_asegurado_per_nat %>"
+                                            <textarea 
+                                                name="direccion_asegurado_per_nat"
+                                                id="direccion_asegurado_per_nat" 
                                                 class="form-control"
-                                            >
+                                                required
+                                            ><%= naturalInsured.direccion_asegurado_per_nat %></textarea>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <input 
+                                    type="hidden" 
+                                    name="id_asegurado_per_nat"
+                                    id="id_asegurado_per_nat"
+                                    value="<%= naturalInsured.id_asegurado_per_nat %>"
+                                    class="form-control"
+                                >
                             </div>
                         </div>
                     </div>
