--- a/src/views/editOwnAgent.ejs
+++ b/src/views/editOwnAgent.ejs
@@ -79,7 +79,8 @@
                                                 required
                                             >
                                         </div>
-                                    </div>                                    
+                                    </div>
+                                    </br>                                    
                                 </div>
                             </div>
                         </div>
@@ -111,20 +112,29 @@
                                             >
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-2 col-form-label">Dirección</label>
                                         <div class="col-sm-10">
-                                            <input 
-                                                type="hidden"
-                                                name="id_agente_propio"
-                                                id="id_agente_propio"  
-                                                value="<%= ownAgent.id_agente_propio %>" 
+                                            <textarea 
+                                                name="direccion_agente_propio"
+                                                id="direccion_agente_propio" 
                                                 class="form-control"
-                                            >
+                                                required
+                                            ><%= ownAgent.direccion_agente_propio %></textarea>
                                         </div>
                                     </div>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
+                            <div class="col-sm-10">
+                                <input 
+                                    type="hidden"
+                                    name="id_agente_propio"
+                                    id="id_agente_propio"  
+                                    value="<%= ownAgent.id_agente_propio %>" 
+                                    class="form-control"
+                                >
                             </div>
                         </div>
                     </div>
