--- a/src/views/legalInsuredForm.ejs
+++ b/src/views/legalInsuredForm.ejs
@@ -88,6 +88,7 @@
                                             </select>
                                         </div>
                                     </div>
+                                    </br>
                                 </div>
                             </div>
                         </div>
@@ -148,16 +149,16 @@
                                             </div>
                                         </div>
                                     </div>
-                                    </br>
-                                    </br>
-                                    <div class="form-group row"><label class="col-sm-2 col-form-label"></label>
-                                        <div class="col-sm-10">
-                                            <input 
-                                                type="hidden" 
-                                                placeholder="" 
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Dirección</label>
+                                        <div class="col-sm-9">
+                                            <textarea 
+                                                name="direccion_asegurado_per_jur"
+                                                id="direccion_asegurado_per_jur" 
+                                                placeholder="Dirección *" 
                                                 class="form-control"
-                                                disabled
-                                            >
+                                                required
+                                            ></textarea>
                                         </div>
                                     </div>
                                 </div>
