Terminado los wizards forms de poliza individual de salud y patrimonial

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -90,9 +90,9 @@
                             <li>
                                 <a href="#">Agregar Individual<span class="fa arrow"></span></a>
                                 <ul class="nav nav-third-level">
+                                    <li><a href="/sistema/add-health-policy">Salud</a></li>
                                     <li><a href="/sistema/add-vehicle-policy">Vehículo</a></li>
-                                    <!--li><a href="#">Third Level Item</a></li>
-                                    <li><a href="#">Third Level Item</a></li-->
+                                    <li><a href="/sistema/add-patrimonial-policy">Patrimonial</a></li>
                                 </ul>
                             </li>
                             <!--li><a href="/sistema/policies">Consultar Pólizas</a></li>
