--- a/src/public/css/plugins/steps/jquery.steps.css
+++ b/src/public/css/plugins/steps/jquery.steps.css
@@ -71,6 +71,11 @@
     width: 25%;
 }
 
+.wizard-health > .steps > ul > li
+{
+    width: 33.3%;
+}
+
 .wizard > .steps > ul > li,
 .wizard > .actions > ul > li
 {
