Terminado dataTable de poliza general

--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -95,8 +95,8 @@
                                     <li><a href="/sistema/add-patrimonial-policy">Patrimonial</a></li>
                                 </ul>
                             </li>
-                            <!--li><a href="/sistema/policies">Consultar Pólizas</a></li>
-                            <li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
+                            <li><a href="/sistema/policies">Consultar Pólizas</a></li>
+                            <!--li><a href="graph_rickshaw.html">Rickshaw Charts</a></li>
                             <li><a href="graph_chartjs.html">Chart.js</a></li>
                             <li><a href="graph_chartist.html">Chartist</a></li>
                             <li><a href="c3.html">c3 charts</a></li>
@@ -131,18 +131,18 @@
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
                     </li-->
-                    <!--li>
-                        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Gestión de Cobranza</span><span class="fa arrow"></span></a>
+                    <li>
+                        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
-                            <li><a href="form_basic.html">Basic form</a></li>
-                            <li><a href="form_advanced.html">Advanced Plugins</a></li>
+                            <li><a href="#">Primas Cobradas</a></li>
+                            <!--li><a href="form_advanced.html">Advanced Plugins</a></li>
                             <li><a href="form_wizard.html">Wizard</a></li>
                             <li><a href="form_file_upload.html">File Upload</a></li>
                             <li><a href="form_editors.html">Text Editor</a></li>
                             <li><a href="form_autocomplete.html">Autocomplete</a></li>
-                            <li><a href="form_markdown.html">Markdown</a></li>
+                            <li><a href="form_markdown.html">Markdown</a></li-->
                         </ul>
-                    </li-->
+                    </li>
                     <li>
                         <a href="#"><i class="fa fa-user-circle-o"></i> <span class="nav-label">Gestión de Usuarios</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
