--- a/src/views/policies.ejs
+++ b/src/views/policies.ejs
@@ -33,7 +33,6 @@
                         <tr>
                             <th>Pólizas</th>
                             <th>Ramo</th>
-                            <th>L.Negocio</th>
                             <th>Tipo</th>
                             <th>Tomador</th>
                             <th>Aseguradora</th>
@@ -53,7 +52,6 @@
                         <tr>
                             <th>Pólizas</th>
                             <th>Ramo</th>
-                            <th>L.Negocio</th>
                             <th>Tipo</th>
                             <th>Tomador</th>
                             <th>Aseguradora</th>
@@ -147,9 +145,8 @@ $(document).ready(function(){
         columns: [
             {"data": "numero_poliza"},
             {"data": "ramo_poliza"},
-            {"data": "tipo_negocio"},
             {"data": "tipo_poliza"},
-            {"data": "cedula_asegurado"},
+            {"data": "nombre_tomador_poliza"},
             {"data": "nombre_aseguradora"},
             {"data": "fecha_desde"},
             {"data": "fecha_hasta"},
