--- a/src/views/editPolicy.ejs
+++ b/src/views/editPolicy.ejs
@@ -89,40 +89,29 @@
                                             >
                                         </div>
                                     </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
-                                        <div class="col-sm-9">
-                                            <select class="form-control" name="ramo_poliza">
-                                                <option selected value="<%= policy.ramo_poliza %>"><%= policy.ramo_poliza %></option>
-                                                <option value="responsabilidad civil de vehículo">Responsabilidad Civil de Vehículo</option>
-                                            </select>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="ibox">
                                 <div class="form-control">
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo Negocio</label>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Ramo</label>
                                         <div class="col-sm-9">
-                                            <input 
-                                                type="text"
-                                                name="tipo_negocio"
-                                                id="tipo_negocio"
-                                                value="<%= policy.tipo_negocio %>"
-                                                class="form-control"
-                                                required
-                                            >
+                                            <select class="form-control" name="ramo_poliza">
+                                                <option selected value="<%= policy.ramo_poliza %>"><%= policy.ramo_poliza %></option>
+                                                <option value="Salud">Salud</option>
+                                                <option value="Automovil">Automovil</option>
+                                                <option value="Patrimonial">Patrimonial</option>
+                                            </select>
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
                                     <div class="form-group row"><label class="col-sm-3 col-form-label">Tomador</label>
                                         <div class="col-sm-9">
                                             <select class="form-control" name="nombre_tomador">
-                                                <option selected value="<%= insured.nombre_asegurado %>"><%= insured.nombre_asegurado %></option>
-                                                <% insureds.forEach((insured) => { %>
-                                                    <option value="<%= insured.nombre_asegurado %>"><%= insured.nombre_asegurado %></option>
+                                                <option selected value="<%= policy.nombre_tomador_poliza %>"><%= policy.nombre_tomador_poliza %></option>
+                                                <% policies.forEach((policy) => { %>
+                                                    <option value="<%= policy.nombre_tomador_poliza %>"><%= policy.nombre_tomador_poliza %></option>
                                                 <% }); %>
                                             </select>
                                         </div>
@@ -161,22 +150,19 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label"></label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="hidden"
-                                                name="id_poliza"
-                                                id="id_poliza"
-                                                value="<%= policy.id_poliza %>"
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    </br>
-                                    </br>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="form-group row"><label class="col-sm-3 col-form-label"></label>
+                        <div class="col-sm-9">
+                            <input 
+                                type="hidden"
+                                name="id_poliza"
+                                id="id_poliza"
+                                value="<%= policy.id_poliza %>"
+                                class="form-control"
+                            >
                         </div>
                     </div>
                     <div class="hr-line-dashed"></div>
