Casi terminado dashboard

--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -248,6 +248,7 @@
                                                         id="tasa_poliza"
                                                         placeholder="Tasa Póliza *" 
                                                         class="form-control"
+                                                        required
                                                     >
                                                 </div>
                                             </div>
