--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -9602,6 +9602,13 @@ body.md-skin {
   height: 35px;
 }
 
+.logo-img {
+  width: 80px; 
+  height: 80px;
+  float: right;
+}
+
+
 .btn-menu {
   color: #ebebeb;
   background-color: #9e9e9e;
