--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -25,6 +25,9 @@
     <link href="/css/plugins/iCheck/custom.css" rel="stylesheet">
     <link href="/css/plugins/steps/jquery.steps.css" rel="stylesheet">
 
+    <!-- Chartist -->
+    <link href="css/plugins/chartist/chartist.min.css" rel="stylesheet">
+
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 
@@ -37,18 +40,10 @@
                 <ul class="nav metismenu" id="side-menu">
                     <li class="nav-header">
                         <div class="dropdown profile-element">
-                            <img alt="image" class="rounded-circle" src="/img/profile_small.jpg"/>
+                            <img alt="image" class="logo-element-img" src="/img/ISOTIPO_VBLANCO_ATINA.png"/>
                             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                                 <span class="block m-t-xs font-bold"><%= name %></span>
-                                <span class="text-muted text-xs block">Art Director <b class="caret"></b></span>
                             </a>
-                            <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                                <li><a class="dropdown-item" href="profile.html">Profile</a></li>
-                                <li><a class="dropdown-item" href="contacts.html">Contacts</a></li>
-                                <li><a class="dropdown-item" href="mailbox.html">Mailbox</a></li>
-                                <li class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="sistema/logout">Logout</a></li>
-                            </ul>
                         </div>
                         <div class="logo-element">
                             <img alt="image" class="logo-element-img" src="/img/ISOTIPO_VBLANCO_ATINA.png"/>
@@ -131,8 +126,8 @@
                             <li><a href="email_template.html">Email templates</a></li>
                         </ul>
                     </li-->
-                    <li>
-                        <a href="#"><i class="fa fa-money"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
+                    <!--li>
+                        <a href="#"><i class="fa fa-file-text"></i> <span class="nav-label">Reportes</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
                             <li><a href="#">Primas Cobradas</a></li>
                             <!--li><a href="form_advanced.html">Advanced Plugins</a></li>
@@ -140,9 +135,9 @@
                             <li><a href="form_file_upload.html">File Upload</a></li>
                             <li><a href="form_editors.html">Text Editor</a></li>
                             <li><a href="form_autocomplete.html">Autocomplete</a></li>
-                            <li><a href="form_markdown.html">Markdown</a></li-->
+                            <li><a href="form_markdown.html">Markdown</a></li>
                         </ul>
-                    </li>
+                    </li-->
                     <li>
                         <a href="#"><i class="fa fa-user-circle-o"></i> <span class="nav-label">Gestión de Usuarios</span><span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level collapse">
@@ -180,109 +175,9 @@
                 <li style="padding: 20px">
                     <span class="m-r-sm text-muted welcome-message">Bienvenido al sistema</span>
                 </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-messages dropdown-menu-right">
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <a class="dropdown-item float-left" href="profile.html">
-                                    <img alt="image" class="rounded-circle" src="img/a7.jpg">
-                                </a>
-                                <div class="media-body">
-                                    <small class="float-right">46h ago</small>
-                                    <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
-                                    <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <a class="dropdown-item float-left" href="profile.html">
-                                    <img alt="image" class="rounded-circle" src="img/a4.jpg">
-                                </a>
-                                <div class="media-body ">
-                                    <small class="float-right text-navy">5h ago</small>
-                                    <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
-                                    <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <a class="dropdown-item float-left" href="profile.html">
-                                    <img alt="image" class="rounded-circle" src="img/profile.jpg">
-                                </a>
-                                <div class="media-body ">
-                                    <small class="float-right">23h ago</small>
-                                    <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
-                                    <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <div class="text-center link-block">
-                                <a href="mailbox.html" class="dropdown-item">
-                                    <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-                        <li>
-                            <a href="mailbox.html" class="dropdown-item">
-                                <div>
-                                    <i class="fa fa-envelope fa-fw"></i> You have 16 messages
-                                    <span class="float-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <a href="profile.html" class="dropdown-item">
-                                <div>
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="float-right text-muted small">12 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <a href="grid_options.html" class="dropdown-item">
-                                <div>
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="float-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <div class="text-center link-block">
-                                <a href="notifications.html" class="dropdown-item">
-                                    <strong>See All Alerts</strong>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
                 <li>
                     <a href="/sistema/logout">
                         <i class="fa fa-sign-out"></i> Log out
-                    </a>
-                </li>
-                <li>
-                    <a class="right-sidebar-toggle">
-                        <i class="fa fa-tasks"></i>
                     </a>
                 </li>
             </ul>
