--- a/src/views/patrimonialPolicyForm.ejs
+++ b/src/views/patrimonialPolicyForm.ejs
@@ -251,6 +251,7 @@
                                                         id="tasa_poliza"
                                                         placeholder="Tasa Póliza *" 
                                                         class="form-control"
+                                                        required
                                                     >
                                                 </div>
                                             </div>
